corrected text and font errors

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <main>
         <div class="arrowandtext">
            <img src="img/www (1)/www/Vector 187 (1).png" alt="" class="arrow">
-           <h1>Experinced <br><span class="jobtitle">Web Developer</span></h1>
+           <h1>Experienced <br><span class="jobtitle">Web Developer</span></h1>
 
           
         </div>
