Updated the footer

--- a/index.html
+++ b/index.html
@@ -115,10 +115,11 @@
     </section>
 
     <footer>
-        <p><i class="fi fi-rr-house-chimney" style="color: white; margin-left: 4%;">Home</i></p>
-        <p><i class="fi fi-rs-user" style="color: white; margin-left: 4%;">About</i></p>
-        <p><i class="fi fi-sr-phone-call" style="color: white; margin-left: 4%;">Contact</i></p>
-
+     <div class="footerend">
+         <a href="#"><p><i class="fi fi-rr-house-chimney" style="color: white; margin-left: 4%;">&nbsp;&nbsp;Home</i></p></a>
+         <a href="#About"><p><i class="fi fi-rs-user" style="color: white; margin-left: 4%;">&nbsp;&nbsp;About&nbsp;me</i></p></a>
+         <a href="#contact"><p><i class="fi fi-sr-phone-call" style="color: white; margin-left: 4%;">&nbsp;&nbsp;  Contact</i></p></a>
+     </div>
 
         <div class="socials">
             <div class="iconbackground"><i class="fi fi-brands-facebook" style="color: white; margin-left: 4%;"></i></div>
