changed images in about me and contact session

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
             <li><a href="#About">About</a></li>
 
-            <li><a href="#">Services</a></li>
+
 
             <li><a href="#Contact">Contact</a></li>
 
@@ -72,7 +72,7 @@
         </div>
 
         <div>
-            <img src="img/undraw_organizing_projects_re_9p1k (1).svg" alt="picture of about me" height="500px">
+            <img src="img/undraw_proud_coder_re_exuy.svg" alt="picture of about me" height="500px">
         </div>
     </div>
     </section>
@@ -84,7 +84,7 @@
         <div class="leftside">
             
 
-            <img src="img/undraw_logic_re_nyb4.svg" alt="work with winner" height="300" class="agreement">
+            <img src="img/undraw_mobile_inbox_re_ciwq.svg" alt="send message" height="300" class="agreement">
             
         </div>
 
@@ -116,9 +116,9 @@
 
     <footer>
      <div class="footerend">
-         <a href="#"><p><i class="fi fi-rr-house-chimney" style="color: white; margin-left: 4%;">&nbsp;&nbsp;Home</i></p></a>
-         <a href="#About"><p><i class="fi fi-rs-user" style="color: white; margin-left: 4%;">&nbsp;&nbsp;About&nbsp;me</i></p></a>
-         <a href="#contact"><p><i class="fi fi-sr-phone-call" style="color: white; margin-left: 4%;">&nbsp;&nbsp;  Contact</i></p></a>
+         <a href="#"><p><i class="fi fi-rr-house-chimney" style="color: white; margin-left: 4%;">&nbsp;&nbsp;Home</i></p></a>&nbsp;&nbsp;
+         <a href="#About"><p><i class="fi fi-rs-user" style="color: white; margin-left: 4%;">&nbsp;&nbsp;About&nbsp;me</i></p></a>&nbsp;&nbsp;
+         <a href="#contact"><p><i class="fi fi-sr-phone-call" style="color: white; margin-left: 4%;">&nbsp;Contact</i></p></a>
      </div>
 
         <div class="socials">
