--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </div>
 
         <div>
-            <img src="img/undraw_proud_coder_re_exuy.svg" alt="picture of about me" height="500px">
+            <img src="img/undraw_proud_coder_re_exuy.svg" alt="picture of about me" height="500px" class="aboutmeimage">
         </div>
     </div>
     </section>
@@ -122,13 +122,17 @@
      </div>
 
         <div class="socials">
-            <div class="iconbackground"><i class="fi fi-brands-facebook" style="color: white; margin-left: 4%;"></i></div>
+            <div class="iconbackground"><i class="fi fi-brands-facebook" style="color: white;"></i></div>
             
-            <div class="iconbackground"><i class="fi fi-brands-linkedin" style="color: white; margin-left: 4%;"></i></div>
-            <div class="iconbackground"><i class="fi fi-brands-whatsapp" style="color: white; margin-left: 4%;"></i></div>
+            <div class="iconbackground"><i class="fi fi-brands-linkedin" style="color: white;"></i></div>
+            <div class="iconbackground"><i class="fi fi-brands-whatsapp" style="color: white;"></i></div>
 
         </div>
+        
 
+        <div>
+            <p class="Copyright"> Copyright&copy; 2024 Winner Onyenagubo</p>
+        </div>
     </footer>
 </body>
 
