Added media query of max width 480px

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <h2>Winner</h2>
           </div>
         <ul class="navitems">
+            <img src="img/burger-menu-svgrepo-com.svg" alt="menu" height="40px">
           
             <li><a href="#">Home</a></li>
 
